fix: footer-nav spacing

--- a/common/common.scss
+++ b/common/common.scss
@@ -109,3 +109,7 @@ body {
   flex: 0 0 auto;
   align-items: center;
 }
+
+.d-footer-nav a {
+  padding: 0.5em 0.75em;
+}
