--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -28,7 +28,3 @@
 .d-footer-nav {
   margin-left: auto;
 }
-
-.d-footer-nav a {
-  padding: 0 0.75em;
-}
