--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -35,7 +35,3 @@
 .d-footer-nav {
   margin: 0.5em 0 0;
 }
-
-.d-footer-nav a {
-  padding: 0.5em 0.75em;
-}
